--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-body{background-color: rgb(255, 255, 255);}
+body{background-color: #fff;}
 
 a{text-decoration: none;}
 
@@ -6,18 +6,3 @@ a{text-decoration: none;}
     background-color: #fff;
 }
 
-.Table{ background-color: aqua;}
-
-/* Estilos para o tema escuro */
-.dark-mode {
-  background-color: #000;
-  color: #fff;
-}
-
-.dark-mode h1 {
-  color: #fff;
-}
-
-.dark-mode h1 {
-  color: #fff;
-}
