--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,9 @@ a{text-decoration: none;}
     background-color: #fff;
 }
 
+.btn-custom-size {
+  width: 230px; /* Ajuste o tamanho da largura desejado aqui */
+  height: 40px; /* Ajuste o tamanho da altura desejado aqui */
+  font-size: 16px; /* Ajuste o tamanho da fonte, se necessário */
+}
+
