--- a/src/Components/Modals/TaskModals/style.css
+++ b/src/Components/Modals/TaskModals/style.css
@@ -1,7 +1,6 @@
-.btn-main_custom-size {
-  width: 230px; /* Ajuste o tamanho da largura desejado aqui */
+.btn-tast-custom-size {
+  width: 250px; /* Ajuste o tamanho da largura desejado aqui */
   height: 40px; /* Ajuste o tamanho da altura desejado aqui */
   font-size: 16px; /* Ajuste o tamanho da fonte, se necessário */
+  text-align: left;
 }
-
-
